{
    "name": "InputGameAction",
    "maps": [
        {
            "name": "Character",
            "id": "c9c80d3c-3207-4d0f-af2d-bb639819ba29",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "3c3dcbc1-78d8-4c2b-b335-4531549bdcd2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WADS",
                    "id": "a1ac5d13-2047-4977-ad84-b54f8aceeab2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b63075c2-c0ba-41b9-b1cd-4130c5a470c0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ec3eb17b-a14c-4298-a839-e5fc5137952a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "61a7ca88-c545-4355-bae8-8895049bf96f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "57a4f933-1c54-4d3f-aee0-faac73d4de7d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}